# wellingtolabpub

./: .gitignore  README.md  pyproject.toml
vault/: _CLAUDE.md  index.md  log.md
vault/.obsidian/: graph.json  workspace.json
vault/papers/: 1989 — Promoter mapping and nucleotide sequence of the bchC bacteriochlorophyll biosynthesis.md  1990 — Localization of the Rhodobacter capsulatus bchCA Operon Oxygen-Regulated Promoter.md  1990 — Structural Analysis of the Rhodobacter capsulatus bchC Bacteriochlorophyll Biosynthesis.md  1991 — Functional significance of overlapping transcripts of crtEF, bchCA, and puf.md  1991 — Overlapping mRNA transcripts of photosynthesis gene operons in Rhodobacter capsulatus.md  1992 — Autoregulation through translation.md  1992 — Photosynthesis gene superoperons in purple nonsulfur bacteria the tip of the iceberg.md  1993 — The Destabilizing Elements in the Coding Region of c- i fos i mRNA Are Recognized as RNA.md  1993 — The destabilizing elements in the coding region of c-fos mRNA are recognized as RNA.md  1994 — Multiple elements in the c-fos protein-coding region facilitate mRNA deadenylation and.md  1997 — HIP1, a human homologue of S. cerevisiae Sla2p, interacts with membrane-associated.md  1997 — Of molecular interactions, mice and mechanisms.md  1997 — Toward Understanding the Molecular Pathology of Huntington's Disease.md  1998 — An unexpected cause for combined deficiency of coagulation factors V and VIII.md  (+292 more)
wellington_vault/: __init__.py  __main__.py  build.py  circle.py  notes.py  openalex.py  util.py  wordcloud_gen.py
(+2360 files in other folders)
