[project]
name = "wellington-vault"
version = "0.1.0"
description = "Build an Obsidian second-brain vault from Dr. Cheryl Wellington's lab publications via OpenAlex"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
wordcloud = ["wordcloud>=1.9"]

[project.scripts]
wellington-vault = "wellington_vault.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"
